// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewManager/PUS11View/Components/View/PUS11View PUS11View :: render snapshot 1`] = `
<div
  className="pus11 h100 posRelative"
>
  <div
    className="flex h100"
  >
    <div
      className="renderErrorText"
    >
      Unable to render view
      <br />
      Please fill-in configuration
    </div>
  </div>
</div>
`;

exports[`viewManager/PUS11View/Components/View/PUS11View PUS11View :: renderInvald snapshot 1`] = `
<div
  className="pus11 h100 posRelative"
>
  <div
    className="flex h100"
  >
    <div
      className="renderErrorText"
    >
      Unable to render view 
      <br />
      this is an error message
    </div>
  </div>
</div>
`;

exports[`viewManager/PUS11View/Components/View/PUS11View generatePopover should match snapshot with valida data 1`] = `
<Popover
  bsClass="popover"
  id="id"
  placement="bottom"
  style={
    Object {
      "height": 70,
    }
  }
>
  <table
    className="popoverTable"
  >
    <tbody>
      <tr>
        <th>
          lastUpdateMode
        </th>
        <td>
          TM
        </td>
      </tr>
      <tr>
        <th>
          lastUpdateTime
        </th>
        <td>
          1527520025823
        </td>
      </tr>
    </tbody>
  </table>
</Popover>
`;
